@startuml

class Veicolo {
  -modello: String
  -anno: int
  -prezzo: double
}

class Auto {
  -numPorte: int
  -Cavalli: int
}



class Clienti {
  -nome: String
  -indirizzo: String
}

class Venditori {
  -Nome: String
  -IdVenditore: int
}

class Showroom {
  -posizione: String
  -veicoli: List<Veicolo>
}

class Vendite {
  -IdVendità: int
  -data: Date
  -veicolo: Veicolo
  -cliente: Cliente
  -salesperson: Salespeople
}

class Moto {
  -numRuote: int
  -numCilindrata:int
}

Veicolo <|-- Auto
Veicolo <|-- Moto


Vendite "n"--"1" Venditori : effettuano
Vendite "n"--"1" Clienti : comprano
Vendite "n"--"1" Veicolo : Viene venduto
Showroom "1"--"n" Vendite : dove vengono effettuate
Venditori "n"--"1" Showroom : lavorano presso
 


@enduml